2013-10-26  Moritz Bunkus  <moritz@bunkus.org>

        * mmg: bug fix: fixed the tracks list box on the input tab being
        invisible/0 pixels high with wxWidgets 2.9.x/3.x.

        * all: integrated the Portuguese translation. Although the
        translation files themselves had been added back in 6.3.0 that
        translation wasn't available for selection due to forgetfulness on
        my part.

        * mkvmerge: bug fix: The file detection code in the MPEG
        elementary stream reader had a logic error. Fixes #928. In
        practice this logic error didn't have any consequence.

2013-10-19  Moritz Bunkus  <moritz@bunkus.org>

        * Released v6.5.0.

        * mkvmerge: enhancement: filler NALUs will now be removed from
        framed h.264/AVC tracks (such as the ones read from Matroska/MP4
        files) just like they have already been when handling unframed
        tracks.

        * mkvextract: new feature: implemented support for extracting VP9
        tracks into IVF files.

        * mkvmerge: new feature: implemented support for VP9 read from IVF
        and Matroska/WebM files. Implements #899.

        * mkvextract: enhancement: using the same track/attachment ID
        multiple times in "tracks", "attachments" or "timecodes_v2" mode
        will result in an error message instead of one empty
        file. Implements #914.

        * mmg: bug fix: With wxWidgets 2.9.x/3.0.x debug message will no
        longer appear as modal dialogs but only go to the log window.

2013-10-18  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: fixed a crash when reading empty global tag
        files. Fixes #921.

2013-10-17  Moritz Bunkus  <moritz@bunkus.org>

        * build system: bug fix: fix autodetection of Boost's library path
        if it is installed in the multiarch directories
        (e.g. /usr/lib/i386-linux-gnu or /usr/lib/x86_64-linux-gnu).

2013-10-04  Moritz Bunkus  <moritz@bunkus.org>
